--- a/src/app/select-color/select-color.component.html
+++ b/src/app/select-color/select-color.component.html
@@ -1,2 +1,13 @@
-<input id="colorSelect" [(ngModel)]="selectedColor" placeholder="Color Selected" (focus)="handleFocus()" (blur)="handleBlur()">
-<color-chrome [hidden]="!show" [color]="selectedColor" (onChangeComplete)="handleChangeComplete($event)"></color-chrome>
+<mat-form-field appearance="fill">
+    <mat-label>Color Selected</mat-label>
+    <input matInput id="colorSelect" [(ngModel)]="selectedColor" placeholder="Select Color" (focus)="handleFocus($event)"
+        (blur)="handleBlur()">
+    <button *ngIf="selectedColor" matSuffix mat-icon-button aria-label="Clear" (click)="selectedColor=''">
+        <mat-icon>close</mat-icon>
+    </button>
+</mat-form-field>
+<color-chrome 
+[hidden]="!show"
+[color]="selectedColor" 
+(onChangeComplete)="handleChangeComplete($event)">
+</color-chrome>
